# belajar_django

./: .gitignore  pyproject.toml
.nix-shell/db/: current_logfiles  postmaster.opts  postmaster.pid
.nix-shell/db/base/1/: 1259  2619  2619_vm  2696  2840  2841
.nix-shell/db/base/16385/: 1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13391  13391_fsm  13391_vm  13395  13396  13396_fsm  13396_vm  13401  13401_fsm  13406  13406_fsm  2187  2228  2579  2600  2600_fsm  2600_vm  2601  2601_fsm  2601_vm  2602  2602_fsm  2602_vm  2603  2603_fsm  2603_vm  2605  2605_fsm  (+138 more)
.nix-shell/db/base/16386/: 1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13391  13391_fsm  13391_vm  13395  13396  13396_fsm  13400  13401  13401_fsm  13401_vm  13406  13406_fsm  13406_vm  13410  175  2187  2228  2337  2579  2600  2600_fsm  2600_vm  2601  2601_fsm  2601_vm  2602  2602_fsm  2602_vm  (+158 more)
.nix-shell/db/base/5/: pg_internal.init
.nix-shell/db/global/: 1214  1232  1233  1260  1262  2671  2672  2676  2677  pg_control  pg_internal.init
src/auth_app/: urls.py  views.py
src/auth_app/templates/auth/: index.html
src/blog/: urls.py  views.py
src/blog/static/css/: style.css
src/blog/templates/blog/: index.html
src/landing/: urls.py  views.py
src/landing/templates/landing/: index.html
src/super_web_python/: settings.py  urls.py
